--- a/bin/install
+++ b/bin/install
@@ -31,6 +31,10 @@ fi
 
 $SUDO curl -skL $BIN_URL -o $TARGET
 
+if [ ! $(which python2 2>/dev/null) ]; then
+  $SUDO sed -i '1 s/python2/python/' $TARGET
+fi
+
 if [[ $? == 0 ]]; then
   $SUDO chmod +x $TARGET
   echo "Done. Now start recording by typing \"asciiio\"."
