--- a/bin/install
+++ b/bin/install
@@ -9,8 +9,8 @@
 #
 # ascii.io recorder installation script
 
-BIN_NAME="asciiio"
-BIN_URL="https://raw.github.com/sickill/ascii.io-cli/master/bin/asciiio"
+BIN_NAME="asciinema"
+BIN_URL="https://raw.github.com/sickill/asciinema/master/bin/asciinema"
 SUDO=""
 
 if [ -d "$HOME/bin" ] && [[ ":$PATH:" == *":~/bin:"* || ":$PATH:" == *":$HOME/bin:"* ]]; then
@@ -37,7 +37,7 @@ fi
 
 if [[ $? == 0 ]]; then
   $SUDO chmod +x $TARGET
-  echo "Done. Now start recording by typing \"asciiio\"."
+  echo "Done. Now start recording by typing \"asciinema\"."
 else
   echo "Oopsie, something unexpected happened."
 fi
