Fix issue with 'sed' command on Mac OS X. When running the script on Mac OS X, the sed command expects a parameter with the -i flag that specifies the backup extension. In this case, no backup is needed, so it can be a blank string.

--- a/install
+++ b/install
@@ -32,7 +32,11 @@ fi
 $SUDO curl -skL $BIN_URL -o $TARGET
 
 if [ ! $(which python2 2>/dev/null) ]; then
-  $SUDO sed -i '1 s/python2/python/' $TARGET
+  if [ $(uname) == 'Darwin' ]; then
+    $SUDO sed -i '' '1 s/python2/python/' $TARGET
+  else
+    $SUDO sed -i '1 s/python2/python/' $TARGET
+  fi
 fi
 
 if [[ $? == 0 ]]; then
