--- a/install
+++ b/install
@@ -20,7 +20,7 @@ url="https://github.com/asciinema/asciinema-cli/releases/download/v${version}/as
 bin_name="asciinema"
 sudo=""
 
-tmpdir=$(mktemp -d)
+tmpdir=$(mktemp -d 2>/dev/null || mktemp -d -t 'asciinema-tmp')
 trap 'rm -rf $tmpdir' EXIT
 
 echo "Downloading asciinema v${version} for $platform..."
