Add --quiet option to rec command (closes #122)

--- a/man/asciinema.1
+++ b/man/asciinema.1
@@ -46,6 +46,9 @@ reduce recorded terminal inactivity to max <sec> seconds
 .TP
 \-y, \-\-yes
 answer "yes" to all prompts (e.g. upload confirmation)
+.TP
+\-q, \-\-quiet
+be quiet, suppress all notices/warnings (implies -y)
 .RE
 .RE
 .PP
