Add -t/--time option to play command
option -t / --time allows user to start replay of a file at a
specified sec. It's quite stupid implemetnation, but should be enough for
review of a big file.

The logic behind is in Player class where sum of delays runs first in
every loop and if this sum is bigger than intended time, than we start
replaying.

This is a part of solution of Issue #118.

--- a/man/asciinema.1
+++ b/man/asciinema.1
@@ -67,6 +67,9 @@ Available options:
 .TP
 \-w, \-\-max\-wait
 reduce replayed terminal inactivity to max \fIsec\fP seconds
+.TP
+\-t, \-\-time
+start playback at \fIsec\fP-th second
 .RE
 .RE
 .PP
