add --speed parameter to man page

--- a/man/asciinema.1
+++ b/man/asciinema.1
@@ -67,6 +67,9 @@ Available options:
 .TP
 \-w, \-\-max\-wait
 reduce replayed terminal inactivity to max \fIsec\fP seconds
+.TP
+\-s, \-\-speed
+speed up playback by factor \fIfactor\fP (can be fractional)
 .RE
 .RE
 .PP
