Switch to .cast extension in docs, help messages etc

--- a/man/asciinema.1
+++ b/man/asciinema.1
@@ -79,7 +79,7 @@ Upload recorded asciicast to asciinema.org site.
 .PP
 This command uploads given asciicast (as recorded by \fIrec\fP command) to asciinema.org for further playback in a web browser.
 .PP
-\fBasciinema rec\fP \fIdemo.json\fP + \fBasciinema play\fP \fIdemo.json\fP + \fBasciinema upload\fP \fIdemo.json\fP is a nice combo for when you want to review an asciicast before publishing it on asciinema.org.
+\fBasciinema rec\fP \fIdemo.cast\fP + \fBasciinema play\fP \fIdemo.cast\fP + \fBasciinema upload\fP \fIdemo.cast\fP is a nice combo for when you want to review an asciicast before publishing it on asciinema.org.
 .RE
 .PP
 .B auth
